# new-langgraph-project

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  Dockerfile  FASTAPI_SETUP.md  Makefile  PyMuPDF.txt  README-DOCKER.md  README.md  README_5STARS.md  README_VOICEDFORM.md  REQ.md  SETUP_GUIDE.md  SPEC.md  USAGE.md  WHISPER_DEPLOYMENT.md  WHISPER_README.md  analyze_multiline_pdf.py  architecture.md  benchmark_handler.py  chat_cache.db  check_s3_files.py  create_and_upload.py  deploy_and_test.sh  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  example.py  langgraph.json  main.py  modal_whisper_server.py  newAPI.txt  pyproject.toml  requirements.txt  run.sh  spec.md  test_api.py  test_custom_events.py  (+18 more)
.github/workflows/: code-review.yml  code-style.yml  integration-tests.yml
.kiro/specs/system-analysis/: requirements.md
.kiro/specs/system-architecture-analysis/: design.md  requirements.md
agent/: __init__.py  graph.py  logging.py  prompts.py  tools.py
agents/document_classifier/: graph.py  langgraph.json  pyproject.toml
agents/hcfa_reader/: __init__.py  graph.py  graph_v2.py
agents/hello/: __init__.py  graph.py
agents/medical_data_extractor/: __init__.py  graph.py  langgraph.json  pyproject.toml
agents/ping/: graph.py
api/: main.py
api/routers/: classify.py
api/services/: __init__.py  langgraph_processor.py
common/: __init__.py  document_extraction.py  image_preprocessing.py  schemas.py
docs/: MENTION_CONTEXT_SECURITY.md  annotation-queue-setup.md
examples/: preprocessing_input.json  usage_example.py  whisper_usage_examples.py
medical-claims-processor/: .env.example  langgraph.json  pyproject.toml  requirements.txt
medical-claims-processor/agents/document_classifier/: __init__.py  graph.py
medical-claims-processor/agents/medical_data_extractor/: graph.py
medical-claims-processor/api/: main.py
medical-claims-processor/api/services/: langgraph_processor.py
medical-claims-processor/common/common/: s3_manager.py  schemas.py
rubrics/: example_assignment.yml  rubric.yaml
sample_submission/: main.c
sample_submission/ex08/: Exc1.c  Exc2.c  Exc3.c  Exc4 - cyberKioskSolution.c  Exc5 - doubleFunSolution.c
scripts/: deploy.sh  localstack-init.sh  run_feedback_on_dataset.py  run_preprocessing_graph.py  test_mention_context.py
src/: __init__.py  agent_building_playground.ipynb  agent_pg2.ipynb  main.py  playground.ipynb  whisper_client.py
src/ContentEngine /: __init__.py
src/MarketingMachine/: command_center_notebook.ipynb
src/MessagingEngine/: graph.py
src/agent/: LangGraph_Agent_Runner.ipynb  PROMPTS.py  __init__.py  agent.py  authentication.py  competitive_analysis.py  configuration.py  content_engine.py  gcs_middleware.py  gcs_tools.py  graph.py  logging.py  main.py  marketing_machine.py  marketing_research.py  messaging_framework.py  nodes.py  old_marketing_machine.py  prompt.py  prompts.py  state.py  tools.py  utils.py  workflow.py  workflow_ollama.py
src/agent/agents/: __init__.py  coder.py  states.py
src/agent/competitive_analysis/: competitive_analysis.py  competitive_analysis_workers.py  models.py  prompts.py  utils.py
src/agent/config/: __init__.py  models_config.py  settings.py
src/agent/middleware/: __init__.py  config_to_state.py  event_tracking.py  mention_context.py
src/agent/middlewares/GCS_FileSystem/: __init__.py  config.py  middleware.py
src/agent/middlewares/GCS_FileSystem/core/: __init__.py  client.py  (+2 more)
src/agent/notebooks/: LangGraph_Agent_Runner_Thread_Deletion.ipynb  competitive_analysis_playground.ipynb
src/agent/prompts/: auditor_prompt.md  coder_prompt.md
src/agent/resources/: auditor.md  coder.md
src/agent/schemas/: __init__.py  mention_context.py
src/agent/sub_agents/: __init__.py  registry.py
src/agent/sub_agents/gcs_filesystem/: __init__.py  agent.py  middleware.py  prompts.py
src/agent/tools/: __init__.py  database.py
src/agent/tools/gcs_filesystem/: README.md  __init__.py  config.py  edit_file.py  ls.py  read_file.py  runtime_config.py  tool_utils.py  write_file.py
src/agent/tools/shared/: __init__.py
src/agent/utils/: __init__.py  database.py  prompts.py
src/agents/: compiler_runner.py  orchestrator.py  rubric_scorer.py  static_analyzer.py  stc_agent.py  unit_tester.py
src/ai/agents/: stc_agent.py
src/ai/mcp/: mcp_client.py
src/ai/prompts/: stc_prompt.py
src/ai/toolkits/: dpc_toolkit.py  example_toolkit.py
src/core/: preprocessing_state.py  shared_state.py
src/db/: mongodb_client.py
src/db/repositories/: product_characteristic_repository.py  product_offering_repository.py  product_price_repository.py  product_specification_repository.py
src/graphs/: __init__.py  feedback.py  preprocessing.py
src/graphs/feedback_v2/: aggregator.py  orchestrator.py  schemas.py  state.py
src/graphs/feedback_v2/agents/: base.py  conventions.py  debug_tasks.py  flow_structure.py  function_division.py  programming_errors.py
src/graphs/feedback_v2/validators/: structure_validator.py
src/mcp/: mcp_config.json
src/models/: product_catalog.py
src/toolkits/: dpc_toolkit.py
src/tools/: shell_tool.py
tests/: handler.py  test-data.json  test-examples.json  test_api.py  test_classifier.py  test_pdf_classifier.py  test_pdf_extract.py  test_pdf_pdfplumber.py  test_serialization.py  test_whisper_integration.py  verify_feedback_v2.py
tests/integration_tests/: test_grading_pipeline.py  test_graph.py
tests/test-files/: cms1500-sample.txt  hcfa1500-sample.txt
tests/unit_tests/: test_agents.py  test_configuration.py  test_tools.py
web/: .env.example  README.md  package-lock.json  package.json
web/src/: middleware.ts
web/src/app/: layout.tsx
web/src/app/(protected)/: layout.tsx
web/src/app/(public)/: layout.tsx  page.tsx
web/src/components/dashboard/: RecentSessions.tsx  TemplateCard.tsx
web/src/components/shared/: Button.tsx  Input.tsx
web/src/lib/: auth.ts  gmail.ts  pdf-generator.ts  supabase.ts  validation.ts
web/src/types/: database.ts  next-auth.d.ts
whisper-service/: README.md  whisper_server.py
(+23 files in other folders)
